tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:74:21: error: expected ‘)’ before ‘in’
   74 |   printf("%d\n", "a" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:74:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   74 |   printf("%d\n", "a" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:75:21: error: expected ‘)’ before ‘in’
   75 |   printf("%d\n", "b" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:75:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   75 |   printf("%d\n", "b" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:76:23: error: expected ‘)’ before ‘in’
   76 |   printf("%d\n", "ell" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:76:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   76 |   printf("%d\n", "ell" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:77:23: error: expected ‘)’ before ‘in’
   77 |   printf("%d\n", "foo" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:77:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   77 |   printf("%d\n", "foo" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
